Added Finishing touches

--- a/src/app/pages/card-form/card-form.component.css
+++ b/src/app/pages/card-form/card-form.component.css
@@ -1,3 +1,12 @@
 .example-container .mat-form-field + .mat-form-field {
   margin-left: 8px;
 }
+
+form {
+  display: grid;
+  justify-content: space-around;
+}
+
+.center {
+  padding: 30px 50px;
+}
